# Likert-estimation

./: README.md  pyproject.toml  sample.csv
src/: test.py  test2.py
src/SurvivalScale/: Bootstrap.py  Marginal.py  Solver.py  __init__.py  getResults.py
