[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SurvivalScale"
version = "0.0.6"
description = "Package to compute survival scale estimates."
license = "MIT"
authors = [
  { name="Ben Smith", email="bosmith@unomaha.edu" },
]
maintainers = [
  { name="Ben Smith", email="bosmith@unomaha.edu" },
]
readme = "README.md"
homepage = "https://github.com/tazzben/Likert-estimation"
repository = "https://github.com/tazzben/Likert-estimation"
keywords = ["Survey", "Statistics", "Bootstrap"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "tqdm>=4.26.0",
    "numba>=0.54.0",
    "scipy>=1.4.0",
]

[project.urls]
"Homepage" = "https://github.com/tazzben/Likert-estimation"
"Bug Tracker" = "https://github.com/tazzben/Likert-estimation/issues"